<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="35dp"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".view.ui.WelcomeActivity">

    <LinearLayout
        android:id="@+id/h1"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_gravity="center"
        android:contentDescription="@string/desc_drag_left"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_h1"
            android:layout_width="290dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_image"
            android:src="@drawable/img_h1" />

        <TextView
            android:id="@+id/intro_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/mate_sc"
            android:text="@string/intro_1"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/h2"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_gravity="center"
        android:contentDescription="@string/desc_drag_left"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_h2"
            android:layout_width="300dp"
            android:layout_height="270dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/desc_image"
            android:src="@drawable/img_h2" />

        <TextView
            android:id="@+id/intro_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/mate_sc"
            android:text="@string/intro_2"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yeseva_one"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="38sp" />

        <Button
            android:id="@+id/btn_signup_activity"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/desc_to_signup"
            android:text="@string/to_signup" />

        <TextView
            android:id="@+id/check_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/overlock_sc"
            android:text="@string/account_check"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_login_activity"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/desc_to_login"
            android:text="@string/to_login" />
    </LinearLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu_2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_circle_stroke" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_fill"
        app:layout_constraintBottom_toBottomOf="@id/menu_1"
        app:layout_constraintEnd_toStartOf="@id/menu_3"
        app:layout_constraintStart_toEndOf="@id/menu_1"
        app:layout_constraintTop_toTopOf="@id/menu_1"
        app:srcCompat="@drawable/ic_circle_stroke" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/ic_circle_fill"
        app:layout_constraintBottom_toBottomOf="@id/menu_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu_2"
        app:layout_constraintTop_toTopOf="@id/menu_2"
        app:srcCompat="@drawable/ic_circle_stroke" />
</androidx.constraintlayout.motion.widget.MotionLayout>
